--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -24,35 +24,17 @@ table, th, td {
 background-color: orange;
 }
 
-/* Stuff for making the coordinates div flash once */
+/* Stuff for the scan/fire coordinates div */
 #chosenCoordinatesDiv {
-    border: 1px solid black;
+    border: 1px solid black;    /* @Rebecca: probably want to take off this border, this is just so you know where the div is */
     background-color: white;
 }
 
-@-webkit-keyframes coordDivAnimation {
-    0% {
-        background-color: Yellow;
-        opacity:1;
-    }
-    22% {
-        background-color: Yellow;
-    }
-    77% {
-        background-color: Yellow;
-    }
-    100% {
-        background-color: #FFFFFF;
-    }
+#chosenSentence {
+    background-color: yellow;
 }
 
-.flash{
-  -webkit-animation-name: coordDivAnimation;
-    -webkit-animation-duration: 500ms;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
-}
-/* End stuff for making the coordinates div flash once */
+/* End stuff for the scan/fire coordinates div */
 
 /*
 button {
