--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -2,22 +2,67 @@ html,
 body {
     margin: 0;
     padding: 0;
+	font-family: Verdana;
+	background-color: #e6f7ff;
+}
+
+.title{
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.information{
+	background-color: white;
+	position: relative;
+	float: left;
+	left: 10px;
+	padding: 5px;
+	width: 30%;
+	height: 100%;
+}
+
+.ShipBoards{
+	background-color: white;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
+	height: 100%;
 }
 
 .gameBoard{
-/*with:100px;
-height:100px;*/
-background-color: light-gray;
+	max-height: 100%;
+	background-color: light-gray;
 }
 
 .gameBoard td {
-width: 40px;
-height:40px;
-background-color:blue;
+  width: 10%;
+  position: relative;
+  background-color: blue;
+}
+.gameBoard td:after {
+  content: '';
+  display: block;
+  margin-top: 100%;
 }
 
 table, th, td {
    border: 1px solid black;
+}
+
+.GameOptions{
+    background-color: white;
+	position: relative;
+	float: right;
+	right: 10px;
+	width: 30%;
+	height: 100%;
+}
+
+.placeShip{
+	border: 1px solid black;
+	padding: 5px;
+	text-align: center;
 }
 
 #MyBoard .ship{
@@ -26,8 +71,9 @@ background-color: orange;
 
 /* Stuff for the scan/fire coordinates div */
 #chosenCoordinatesDiv {
-    border: 1px solid black;    /* @Rebecca: probably want to take off this border, this is just so you know where the div is */
-    background-color: white;
+    border: 1px solid black;
+	padding: 5px;
+	text-align: center;
 }
 
 #chosenSentence {
